# python-kafka

./: .gitignore  README.md  pyproject.toml  setup.cfg  tox.ini
kafka_module/sync/: consumer.py  producer.py
